test/errors/class_interface_fail.hy
interface Drawable
{
    void Draw()
}

class Invisible inherits Drawable
{
    Invisible() {}
}

// expect: Class 'Invisible' does not implement interface member 'Drawable.Draw'